--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Gatsby Starter Project to easily get started with the Portfolio Minimal Theme.",
   "scripts": {
     "clean": "gatsby clean",
+    "start": "gatsby clean; gatsby develop",
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve"
