--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "gatsby clean",
     "start": "gatsby clean; gatsby develop",
     "develop": "gatsby develop",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build",
+    "build": "gatsby build",
     "serve": "gatsby serve"
   },
   "dependencies": {
