--- a/content/settings.json
+++ b/content/settings.json
@@ -26,7 +26,7 @@
       "ctaButton": {
         "openNewTab": true,
         "label": "Download Resume",
-        "url": "/resume.pdf"
+        "url": "/hriday_sabir_es.pdf"
       },
       "footer": [
         { "label": "Privacy", "url": "/privacy" },
